--- a/App/Catnip/mobile/src/main/res/layout/activity_main.xml
+++ b/App/Catnip/mobile/src/main/res/layout/activity_main.xml
@@ -1,58 +1,79 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:background="@drawable/us_background">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Enter Zip Code"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:textSize="30dp"
-        android:id="@+id/zipText"
-        android:layout_marginTop="82dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:background="@drawable/layout_border"
+        android:alpha=".9">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/zipCode"
-        android:layout_marginTop="26dp"
-        android:layout_below="@+id/zipText"
-        android:layout_centerHorizontal="true" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Enter Zip Code"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textSize="30dp"
+            android:id="@+id/zipText"
+            android:layout_marginTop="82dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/textBlack" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Enter"
-        android:id="@+id/enterZip"
-        android:layout_below="@+id/zipCode"
-        android:layout_centerHorizontal="true" />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/zipCode"
+            android:layout_marginTop="26dp"
+            android:layout_below="@+id/zipText"
+            android:layout_centerHorizontal="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Use Phone Location"
-        android:id="@+id/locationText"
-        android:layout_below="@+id/enterZip"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="76dp"
-        android:textSize="30dp"
-        android:textStyle="bold" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Enter"
+            android:id="@+id/enterZip"
+            android:layout_below="@+id/zipCode"
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/textBlack"
+            android:background="@drawable/mybutton" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Enter"
-        android:id="@+id/thisLocation"
-        android:layout_marginTop="10dp"
-        android:layout_below="@+id/locationText"
-        android:layout_centerHorizontal="true" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Use Phone Location"
+            android:id="@+id/locationText"
+            android:layout_below="@+id/enterZip"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="76dp"
+            android:textSize="30dp"
+            android:textStyle="bold"
+            android:textColor="@color/textBlack" />
 
-</RelativeLayout>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Enter"
+            android:id="@+id/thisLocation"
+            android:layout_marginTop="10dp"
+            android:layout_below="@+id/locationText"
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/textBlack"
+            android:background="@drawable/mybutton" />
+
+
+    </RelativeLayout>
+
+</FrameLayout>
+
