--- a/App/Catnip/mobile/src/main/res/values/colors.xml
+++ b/App/Catnip/mobile/src/main/res/values/colors.xml
@@ -5,5 +5,8 @@
     <color name="colorAccent">#FF4081</color>
     <color name="link">#58A3FE</color>
     <color name="Republican">#ed4337</color>
+    <color name="Democrat">#2356fd</color>
+    <color name="Indep">#039900</color>
     <color name="boxBack">#e8e6e6</color>
+    <color name="textBlack">#363636</color>
 </resources>
