--- a/App/Catnip/wear/src/main/res/layout/activity_candidates.xml
+++ b/App/Catnip/wear/src/main/res/layout/activity_candidates.xml
@@ -3,7 +3,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/food_bg_160">>
+    android:background="@drawable/us_background">>
 
     <android.support.wearable.view.GridViewPager
         android:id="@+id/pager"
