--- a/App/Catnip/wear/src/main/res/layout/activity_custom_fragment.xml
+++ b/App/Catnip/wear/src/main/res/layout/activity_custom_fragment.xml
@@ -17,40 +17,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/card_background"
-    android:orientation="vertical"><![CDATA[>
-
-
-
-    ]]>
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Republican"
-        android:id="@+id/textView"
+        android:text="-"
+        android:id="@+id/party"
         android:layout_gravity="center_horizontal|top"
         android:textColor="#7e7e7e"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="20dp" />
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:id="@+id/imageButton"
-        android:src="@drawable/ic_abe"
-        android:layout_gravity="center" />
+        android:src="@drawable/blank"
+        android:layout_gravity="center"
+        android:scaleType="fitCenter" />
 
     <TextView
-        android:id="@+id/testt"
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
         android:layout_gravity="center_horizontal|bottom"
         android:layout_margin="8dp"
-        android:text="@string/name"
         android:textColor="@color/primary_text_light"
-        android:textSize="18dp" /><![CDATA[
+        android:textSize="18dp"
+        android:text="-" />
 
-    />
-
-]]>
 </LinearLayout>
